# amc-backend

./: .skills  AGENTS.md  flake.nix  pyproject.toml
.agents/skills/: get_world.md
.github/workflows/: ci.yml
sql/: setup_bot_reader.sql
src/: manage.py
src/amc/: admin.py  anticheat.py  apps.py  auth.py  auto_arrest.py  cargo.py  characterlocation_stats.py  command_framework.py  companies.py  config.py  context.py  criminals.py  dashboard_services.py  deliverypoints.py  discord_client.py  enums.py  error_reporter.py  events.py  factories.py  fraud_detection.py  game_server.py  gov_employee.py  guilds.py  jobs.py  locations.py  mailbox.py  mod_detection.py  mod_server.py  models.py  player_tags.py  police.py  rescue_reminder.py  save_file.py  server_logs.py  special_cargo.py  sse_client.py  status.py  subsidies.py  supply_chain.py  tasks.py  (+79 more)
src/amc/api/: anticheat_routes.py  auction_routes.py  auth_routes.py  bot_events.py  economy_routes.py  player_positions.proto  player_positions_common.py  player_positions_pb2.py  routes.py  (+3 more)
src/amc_backend/: api.py  api_v1.py  asgi.py  auth.py  dashboard_auth.py  discord_error_handler.py  settings.py  urls.py  worker.py  wsgi.py
src/amc_cogs/: admin.py  apps.py  auth.py  chat.py  commerce.py  crime_stats.py  economy.py  events.py  faction.py  faction_stats.py  jobs.py  leaderboard.py  models.py  moderation.py  profile.py  roleplay.py  server.py  status.py  supply_chain.py  test_tuning_workshop.py  tuning_workshop.py  utils.py
src/amc_finance/: admin.py  apps.py  loans.py  models.py  services.py  tests.py  treasury_summary.py
src/necesse/: apps.py  models.py  server_logs.py  tasks.py
(+289 files in other folders)
